<resources>
    <string name="app_name" translatable="false">X 25 Demo</string>
    <string name="title_activity_qr_display">Message</string>

    <!-- Preference strings -->
    <string name="file_pref_admin">preferences_admin</string>
    <string name="pref_cat_lang">Languages</string>
    <string name="pref_sysdef_lang">Use system default language</string>
    <string name="pref_choose_lang">Select application language</string>
    <string name="pref_choose_lang_title">Choose language</string>
    <string name="pref_messages_cat">Discovered messages</string>
    <string name="pref_admin_cat">Admin settings</string>
    <string name="pref_admin_mode_on">Admin Mode</string>
    <string name="pref_admin_mode_summ_on">Switch off to go back to user mode</string>
    <string name="pref_admin_mode_summ_off">Exit setting to return to user mode</string>
    <string name="pref_admin_mode_timer_title">"Time left in Admin Mode "</string>
    <string name="pref_admin_mode_timer_summ">"Click to restart counter"</string>

    <!-- Admin mode -->
    <string name="admin_mode_title_suffix">" - Admin"</string>
    <string name="admin_mode_toast">Admin Mode activated</string>


    <string name="language">en</string>

    <string name="scan_button">Scan</string>
    <string name="scan_button_hint">Scan code</string>

    <string name="solve_puzzle">Solve</string>
    <string name="msgs_populate">Show All Messages</string>
    <string name="msgs_delete">Delete Messages</string>
    <string name="action_about">About</string>

    <string name="scan_error_title">Scan error!</string>
    <string name="scan_error_body">Code invalid or scanned incorrectly.</string>
    <string name="title_activity_sorting_hat" translatable="false">SortingHat</string>
    <string name="title_activity_settings">Settings</string>
    <string name="spinner_animation" translatable="false">Spinner animation</string>
    <string name="splash" translatable="false">Application Logo for splash</string>
    <string name="spinner" translatable="false">Spinner animation</string>


    <string name="about_text1">X 25 Demo</string>
    <string name="about_text2">Application developed by:</string>
    <string name="about_text3">Pandora Escape</string>
    <string name="about_text4">Javier Garcia</string>
    <string name="title_activity_about">AboutActivity</string>

</resources>
