<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item
        android:id="@+id/solve"
        android:orderInCategory="1"
        android:title="@string/msgs_populate"
        android:titleCondensed="@string/solve_puzzle"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/populate"
        android:orderInCategory="9"
        android:title="@string/msgs_populate"
        android:titleCondensed="@string/msgs_populate"
        app:showAsAction="never"/>
    <item
        android:id="@+id/delete_msgs"
        android:orderInCategory="10"
        android:title="@string/msgs_delete"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never"/>
</menu>
