<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:alpha=".25"
        android:src="@drawable/pandora"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="47dp"
        android:allowUndo="false"
        android:gravity="center"
        android:text="@string/about_text1"
        android:textColor="@android:color/black"
        android:textSize="50sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/about_text2"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        android:layout_above="@+id/textView2"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/about_text3"
        android:textColor="@android:color/black"
        android:textSize="35sp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/about_text4"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="italic"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"/>

</RelativeLayout>
