<FrameLayout
    android:id="@+id/main_bg_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/metal_core_texture"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ListView
                android:id="@+id/clueListView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentBottom="true"
                android:background="#7fffffff"
                android:transitionGroup="false"
                android:visibility="visible"/>

            <ImageView
                android:id="@+id/spinner_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/spinner"
                android:src="@drawable/spinner_animation"
                android:visibility="gone"/>

        </RelativeLayout>

        <Button
            android:id="@+id/scan_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_weight="0"
            android:clickable="true"
            android:elegantTextHeight="false"
            android:enabled="true"
            android:hint="@string/scan_button_hint"
            android:onClick="scanQR"
            android:singleLine="true"
            android:text="@string/scan_button"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/splash_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:contentDescription="@string/splash"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:pivotX="50%"
        android:pivotY="50%"
        android:scaleType="centerInside"
        android:scaleX="2"
        android:scaleY="2"
        android:src="@drawable/x25_logo"
        />

</FrameLayout>
