<FrameLayout android:id="@+id/display_bg_layout"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/metal_core_texture"
              android:backgroundTint="#5fffffff"
              android:backgroundTintMode="src_over"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.pandora_escape.javier.pandora_escape.QR_Display">

    <LinearLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/scan_error_title"
            android:textColor="@android:color/black"
            android:textSize="28sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/bodyTextView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/scan_error_body"
            android:textColor="@android:color/black"
            android:textSize="22sp"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/splash_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/splash"
        android:scaleType="centerInside"
        android:src="@drawable/x25_logo"
        android:alpha="0.1"
        android:layout_gravity="center"/>

</FrameLayout>
